fix embed sidebar collapsed button

--- a/web/scss/features/sidebar-panel.scss
+++ b/web/scss/features/sidebar-panel.scss
@@ -1,7 +1,7 @@
 .sidebar-expand {
   position: relative;
 
-  a {
+  > a {
     float: left;
     left: 10px;
     position: absolute;
@@ -37,34 +37,34 @@
       background-color: #ccc;
       color: rgb(40 40 40);
     }
+  }
 
-    @media (max-width: $mobile-max-width) {
-      height: 45px;
-      width: 56px;
-      background-image: none;
-      border-radius: 5px;
-      top: 58px;
+  &.mobile > a {
+    height: 45px;
+    width: 56px;
+    background-image: none;
+    border-radius: 5px;
+    top: 58px;
 
-      & svg.svg-inline--fa {
-        font-size: 33px;
-        position: absolute;
-        left: 10px;
-        top: 5px;
-        color: #fff;
-      }
+    & svg.svg-inline--fa {
+      font-size: 33px;
+      position: absolute;
+      left: 10px;
+      top: 5px;
+      color: #fff;
+    }
 
-      & span.layer-count {
-        color: #fff;
-        position: relative;
-        top: 8px;
-        font-size: 18px;
-        font-weight: 600;
-        background: #333;
-        border-radius: 50%;
-        padding: 0 5px;
-        text-align: center;
-        margin: 8px;
-      }
+    & span.layer-count {
+      color: #fff;
+      position: relative;
+      top: 8px;
+      font-size: 18px;
+      font-weight: 600;
+      background: #333;
+      border-radius: 50%;
+      padding: 0 5px;
+      text-align: center;
+      margin: 8px;
     }
   }
 }
